seccion ventas subida

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="collapse navbar-collapse " id="collapsibleNavId">
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0 ">
                     <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Inicio<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="/index.html">Inicio<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="">Ventas</a>
@@ -78,7 +78,7 @@
             <h3 class="mb-2">Propiedades destacadas</h3>
             <div class="row">
                 <a  class="a-card col-md-3 col-sm-6 col-xs-12 p-1"href="goglee.com">
-                    <div class="card" style="width: 100%; cursor: pointer;">
+                    <div class="card sombra" style="width: 100%; cursor: pointer;">
                         <img src="/src/img/1725637138.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h6 class="card-title">Duplex Miradores de Manantial</h6>
@@ -92,7 +92,7 @@
                     </div>
                 </a>
                 <a  class="a-card col-md-3 col-sm-6 col-xs-12 p-1"href="goglee.com">
-                    <div class="card" style="cursor: pointer;">
+                    <div class="card sombra" style="cursor: pointer;">
                         <img src="/src/img/1725560743.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h6 class="card-title">Departamentos Torres H</h6>
@@ -105,8 +105,8 @@
                         </div>
                     </div>
                 </a>
-                <a  class="a-card col-md-3 col-sm-6 col-xs-12 p-1"href="goglee.com">
-                    <div class="card" style="cursor: pointer;">
+                <a  class="a-card col-md-3 col-sm-6 col-xs-12 p-1" href="/src/html/ventas/propiedades/01/molde.html">
+                    <div class="card sombra" style="cursor: pointer;">
                         <img src="/src/img/1725618257.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h6 class="card-title">Casa 138m²</h6>
@@ -120,7 +120,7 @@
                     </div>
                 </a>
                 <a  class="a-card col-md-3 col-sm-6 col-xs-12 p-1"href="goglee.com">
-                    <div class="card" style="cursor: pointer;">
+                    <div class="card sombra" style="cursor: pointer;">
                         <img src="/src/img/1725931657.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h6 class="card-title">Casa 118m²</h6>
@@ -144,22 +144,22 @@
                 <div class="row">
                     <div class="col-md-6 my-2">
                         <h5>Servicios inmobiliarios GVR</h5>
-                        <p class="text-muted">"Venta y alquiler de Propiedades · Tasaciones de Propiedades ."</p>
+                        <p class="text-muted">"Venta · Alquiler · Administración · Tasación de Propiedades ."</p>
                         <div class="displayFooter">
-                            <div class="rounded-circle divRedes"><a class="linkRedes" href="https://www.facebook.com/gvrinmobiliaria/"><i class="fab fa-facebook-f"></i></a></div>
-                            <div class="rounded-circle divRedes"><a class="linkRedes" href="https://instagram.com/gvr.servicios.inmobiliarios?igshid=1gxckdir776h7"><i class="fab fa-instagram"></i></a></div>
-                            <div class="rounded-circle divRedes"><a class="linkRedes" href="https://api.whatsapp.com/send?phone=5493513643917"><i class="fab fa-whatsapp"></i></a></div>
-                            <div class="rounded-circle divRedes"><a class="linkRedes" href="mailto: gomezleo35@gmail.com"><i class="far fa-envelope"></i></a></div>
+                            <a class="linkRedes" href="https://www.facebook.com/gvrinmobiliaria/"><div class="rounded-circle divRedes"><i class="fab fa-facebook-f"></i></div></a>
+                            <a class="linkRedes" href="https://instagram.com/gvr.servicios.inmobiliarios?igshid=1gxckdir776h7"><div class="rounded-circle divRedes"><i class="fab fa-instagram"></i></div></a>
+                            <a class="linkRedes" href="https://api.whatsapp.com/send?phone=5493513643917"><div class="rounded-circle divRedes"><i class="fab fa-whatsapp"></i></div></a>
+                            <a class="linkRedes" href="mailto: gvrinmobiliaria@gmail.com"><div class="rounded-circle divRedes"><i class="far fa-envelope"></i></div></a>
                         </div>
 
                     </div>  
                     <div class="col-md-6 my-2">
                         <h5>Contáctenos</h5>
-                        <div>Cleveland 5592. Barrio Santa Isabel segunda sección. Córdoba. Argentina. <br>
+                        <div>24 de Septiembre. Barrio General Paz. Córdoba. Argentina. <br>
                             Tel: +54 9 351 3643917 <br>
                             Tel: +54 9 351 2500514
                             <br>
-                            <i class="far fa-envelope"></i><a href="mailto: gomezleo35@gmail.com"> inmobiliaria@gmail.com</a>
+                            <i class="far fa-envelope"></i><a href="mailto: gvrinmobiliaria@gmail.com"> gvrinmobiliaria@gmail.com</a>
                         </div>
                     </div>
                 </div>
@@ -168,7 +168,7 @@
         <div class="subFooter  displayFooter">
             <div class="container">
                 <div class="row">
-                    <div class="text-white col-md-8 my-2">© 2020 Inmobiliaria GVR - Matriculado responsable Gómez Emmanuel Emilio Matrícula 5795</div>
+                    <div class="text-white col-md-8 my-2">© 2020 Inmobiliaria GVR - Matriculado responsable Gómez Emmanuel Emilio CPI 5795</div>
                     <div class="text-warning col-md-4 my-2">Sitio diseñado y creado por Gómez Leonardo</div>
                 </div>
             </div>
